// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DrugDetailScreen — RTL snapshots > LTR snapshot (lang=en) 1`] = `
<SafeAreaView
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#f5f5f5",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "borderBottomWidth": 1,
          "padding": 16,
        },
        {
          "backgroundColor": "#fff",
          "borderBottomColor": "#d8dde6",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "PublicSans-Bold",
            "fontSize": 24,
            "marginBottom": 2,
          },
          {
            "color": "#141c28",
          },
          false,
        ]
      }
    >
      amoxicillin
    </Text>
    <Text
      style={
        [
          {
            "fontFamily": "Manrope",
            "fontSize": 14,
            "marginBottom": 8,
          },
          {
            "color": "#4a5568",
          },
        ]
      }
    >
      amoxicillin
       · J01CA04
    </Text>
    <Pressable
      accessibilityRole="button"
      accessibilityState={
        {
          "selected": false,
        }
      }
      style={
        [
          {
            "borderRadius": 9999,
            "borderWidth": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#d8dde6",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Manrope",
              "fontSize": 14,
            },
            {
              "color": "#4a5568",
            },
            false,
          ]
        }
      >
        Antibiotic
      </Text>
    </Pressable>
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 12,
          "justifyContent": "flex-end",
        }
      }
    >
      <Pressable
        accessibilityLabel="drug.addBookmark"
        accessibilityRole="button"
        hitSlop={8}
        onClick={[Function]}
        testID="bookmark-btn"
      >
        <View
          style={{}}
        >
          <View
            testID="icon-Heart"
          />
        </View>
      </Pressable>
    </View>
  </View>
  <View
    style={
      [
        {
          "borderBottomWidth": 1,
          "flexDirection": "row",
        },
        {
          "backgroundColor": "#fff",
          "borderBottomColor": "#d8dde6",
        },
      ]
    }
  >
    <Pressable
      accessibilityLabel="Overview"
      accessibilityRole="tab"
      accessibilityState={
        {
          "selected": true,
        }
      }
      onClick={[Function]}
      onLayout={[Function]}
      style={
        {
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
      testID="tab-overview"
    >
      <Text
        style={
          [
            {
              "fontSize": 16,
            },
            {
              "color": "#4a5568",
            },
            {
              "color": "#2e9e71",
              "fontWeight": "600",
            },
          ]
        }
      >
        Overview
      </Text>
    </Pressable>
    <Pressable
      accessibilityLabel="Clinical"
      accessibilityRole="tab"
      accessibilityState={
        {
          "selected": false,
        }
      }
      onClick={[Function]}
      onLayout={[Function]}
      style={
        {
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
      testID="tab-clinical"
    >
      <Text
        style={
          [
            {
              "fontSize": 16,
            },
            {
              "color": "#4a5568",
            },
            false,
          ]
        }
      >
        Clinical
      </Text>
    </Pressable>
    <Pressable
      accessibilityLabel="Pricing"
      accessibilityRole="tab"
      accessibilityState={
        {
          "selected": false,
        }
      }
      onClick={[Function]}
      onLayout={[Function]}
      style={
        {
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
      testID="tab-pricing"
    >
      <Text
        style={
          [
            {
              "fontSize": 16,
            },
            {
              "color": "#4a5568",
            },
            false,
          ]
        }
      >
        Pricing
      </Text>
    </Pressable>
    <Pressable
      accessibilityLabel="Enrich"
      accessibilityRole="tab"
      accessibilityState={
        {
          "selected": false,
        }
      }
      onClick={[Function]}
      onLayout={[Function]}
      style={
        {
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
      testID="tab-enrich"
    >
      <Text
        style={
          [
            {
              "fontSize": 16,
            },
            {
              "color": "#4a5568",
            },
            false,
          ]
        }
      >
        Enrich
      </Text>
    </Pressable>
    <View
      style={
        [
          {
            "borderRadius": 1,
            "bottom": 0,
            "height": 2,
            "position": "absolute",
          },
          {
            "backgroundColor": "#2e9e71",
          },
          {},
        ]
      }
    />
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  />
</SafeAreaView>
`;

exports[`DrugDetailScreen — RTL snapshots > RTL snapshot (lang=ar) 1`] = `
<SafeAreaView
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#f5f5f5",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "borderBottomWidth": 1,
          "padding": 16,
        },
        {
          "backgroundColor": "#fff",
          "borderBottomColor": "#d8dde6",
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "PublicSans-Bold",
            "fontSize": 24,
            "marginBottom": 2,
          },
          {
            "color": "#141c28",
          },
          {
            "fontFamily": "NotoNaskhArabic",
            "textAlign": "right",
          },
        ]
      }
    >
      أموكسيسيلين
    </Text>
    <Text
      style={
        [
          {
            "fontFamily": "Manrope",
            "fontSize": 14,
            "marginBottom": 8,
          },
          {
            "color": "#4a5568",
          },
        ]
      }
    >
      amoxicillin
       · J01CA04
    </Text>
    <Pressable
      accessibilityRole="button"
      accessibilityState={
        {
          "selected": false,
        }
      }
      style={
        [
          {
            "borderRadius": 9999,
            "borderWidth": 1,
            "paddingHorizontal": 12,
            "paddingVertical": 8,
          },
          {
            "backgroundColor": "#ffffff",
            "borderColor": "#d8dde6",
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "Manrope",
              "fontSize": 14,
            },
            {
              "color": "#4a5568",
            },
            false,
          ]
        }
      >
        Antibiotic
      </Text>
    </Pressable>
    <View
      style={
        {
          "flexDirection": "row",
          "gap": 12,
          "justifyContent": "flex-end",
        }
      }
    >
      <Pressable
        accessibilityLabel="drug.addBookmark"
        accessibilityRole="button"
        hitSlop={8}
        onClick={[Function]}
        testID="bookmark-btn"
      >
        <View
          style={{}}
        >
          <View
            testID="icon-Heart"
          />
        </View>
      </Pressable>
    </View>
  </View>
  <View
    style={
      [
        {
          "borderBottomWidth": 1,
          "flexDirection": "row",
        },
        {
          "backgroundColor": "#fff",
          "borderBottomColor": "#d8dde6",
        },
      ]
    }
  >
    <Pressable
      accessibilityLabel="Overview"
      accessibilityRole="tab"
      accessibilityState={
        {
          "selected": true,
        }
      }
      onClick={[Function]}
      onLayout={[Function]}
      style={
        {
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
      testID="tab-overview"
    >
      <Text
        style={
          [
            {
              "fontSize": 16,
            },
            {
              "color": "#4a5568",
            },
            {
              "color": "#2e9e71",
              "fontWeight": "600",
            },
          ]
        }
      >
        Overview
      </Text>
    </Pressable>
    <Pressable
      accessibilityLabel="Clinical"
      accessibilityRole="tab"
      accessibilityState={
        {
          "selected": false,
        }
      }
      onClick={[Function]}
      onLayout={[Function]}
      style={
        {
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
      testID="tab-clinical"
    >
      <Text
        style={
          [
            {
              "fontSize": 16,
            },
            {
              "color": "#4a5568",
            },
            false,
          ]
        }
      >
        Clinical
      </Text>
    </Pressable>
    <Pressable
      accessibilityLabel="Pricing"
      accessibilityRole="tab"
      accessibilityState={
        {
          "selected": false,
        }
      }
      onClick={[Function]}
      onLayout={[Function]}
      style={
        {
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
      testID="tab-pricing"
    >
      <Text
        style={
          [
            {
              "fontSize": 16,
            },
            {
              "color": "#4a5568",
            },
            false,
          ]
        }
      >
        Pricing
      </Text>
    </Pressable>
    <Pressable
      accessibilityLabel="Enrich"
      accessibilityRole="tab"
      accessibilityState={
        {
          "selected": false,
        }
      }
      onClick={[Function]}
      onLayout={[Function]}
      style={
        {
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
      testID="tab-enrich"
    >
      <Text
        style={
          [
            {
              "fontSize": 16,
            },
            {
              "color": "#4a5568",
            },
            false,
          ]
        }
      >
        Enrich
      </Text>
    </Pressable>
    <View
      style={
        [
          {
            "borderRadius": 1,
            "bottom": 0,
            "height": 2,
            "position": "absolute",
          },
          {
            "backgroundColor": "#2e9e71",
          },
          {},
        ]
      }
    />
  </View>
  <View
    style={
      {
        "flex": 1,
      }
    }
  />
</SafeAreaView>
`;
